[tool.poetry]
name = "yelp-review-demo"
version = "0.0.1"
description = "Fine tuning an LLM on Yelp review data"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0"
lightning = "^2.0"
datasets = "^2.10"
transformers = "^4.33"
pandas = "^2.1"
bokeh = "^3.0"
h5py = "^3.9"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
